@@ -5,7 +5,7 @@
 /*
     CrossFire, A Multiplayer game for X-windows
 
-    Copyright (C) 2002 Mark Wedel & Crossfire Development Team
+    Copyright (C) 2002,2007 Mark Wedel & Crossfire Development Team
     Copyright (C) 1992 Frank Tore Johansen
 
     This program is free software; you can redistribute it and/or modify
@@ -920,7 +920,6 @@ void put_object_in_sack (object *op, object *sack, object *tmp, uint32 nrof)
 object *drop_object (object *op, object *tmp, uint32 nrof) 
 {
     char buf[MAX_BUF];
-    object *floor;
     tag_t tmp_tag;
 
     if (QUERY_FLAG(tmp, FLAG_NO_DROP)) {
@@ -1965,14 +1964,14 @@ int command_lock_item(object *op, char *params) {
     if (!params || strlen(params) == 0) {
         draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_FAILURE,
             "Lock what item?", "Lock what item?");
-        return;
+        return 1;
     }
 
     item = find_best_object_match(op, params);
     if (!item) {
         draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_TYPE_COMMAND_FAILURE,
             "Can't find any matching item.", "Can't find any matching item.");
-        return;
+        return 1;
     }
 
     if (QUERY_FLAG(item, FLAG_INV_LOCKED)) {
